--- a/etc/kitaman.conf
+++ b/etc/kitaman.conf
@@ -2,8 +2,12 @@
 # 
 # format is very simple
 # ALSO NOTE that for now , kitaman doesnt fully use these options, some paths are sadly still hardwired 
-SRC_DIR="src"
-PKG_DIR="/usr/kitaman/pkg"
+SRC_DIR="/home/kirillvr/Desktop/kitaman/src"
+STATE_DIR="/home/kirillvr/Desktop/kitaman/var"
+BUILD_DIR="/home/kirillvr/Desktop/kitaman/build"
+FAKE_INSTALL_DIR="/home/kirillvr/Desktop/kitaman/install"
+
+PKG_DIR="/home/kirillvr/Desktop/kitaman/pkg"
 
 # Possible options: none sexy sexier sexiest too_hot_for_your_display
 OUTPUT_SEXY_LEVEL="sexy"
