--- a/etc/kitaman.conf
+++ b/etc/kitaman.conf
@@ -2,12 +2,13 @@
 # format is very simple
 # ALSO NOTE that for now , kitaman doesnt fully use these options, some paths are sadly still hardwired 
 #
-SRC_DIR="/home/kirillvr/Desktop/kitaman/src"
-STATE_DIR="/home/kirillvr/Desktop/kitaman/var"
-BUILD_DIR="/home/kirillvr/Desktop/kitaman/build"
-FAKE_INSTALL_DIR="/home/kirillvr/Desktop/kitaman/install"
+KITA_FILES_DIR="/usr/kitaman/kita_files"
+SRC_DIR="/usr/kitaman/src"
+STATE_DIR="/var/kitaman"
+BUILD_DIR="/var/kitaman/build"
+FAKE_INSTALL_DIR="/var/kitaman/install"
 
-PKG_DIR="/home/kirillvr/Desktop/kitaman/pkg"
+PKG_DIR="/usr/kitaman/pkg"
 
 # Possible options: none sexy sexier sexiest too_hot_for_your_display
 OUTPUT_SEXY_LEVEL="sexy"
