a LOT of refacturing and kitaman now doesnt stop after one fail

--- a/etc/kitaman.conf
+++ b/etc/kitaman.conf
@@ -2,9 +2,11 @@
 # format is very simple
 # ALSO NOTE that for now , kitaman doesnt fully use these options, some paths are sadly still hardwired 
 #
+
+
 KITA_FILES_DIR="/usr/kitaman/kita_files"
 SRC_DIR="/usr/kitaman/src"
-STATE_DIR="/var/kitaman"
+STATE_DIR="/var/kitaman/state"
 BUILD_DIR="/var/kitaman/build"
 FAKE_INSTALL_DIR="/var/kitaman/install"
 
