default task for raike

--- a/etc/kitaman.conf
+++ b/etc/kitaman.conf
@@ -1,16 +1,15 @@
 # This is kitaman conf file
 # format is very simple
 # ALSO NOTE that for now, kitaman doesnt fully use these options, some paths are sadly still hardwired 
-#
+
 
 KITA_FILES_DIR="/usr/kitaman/kita_files"
 SRC_DIR="/usr/kitaman/src"
 STATE_DIR="/var/kitaman/state"
 BUILD_DIR="/var/kitaman/build"
 FAKE_INSTALL_DIR="/var/kitaman/install"
+TEMP_DIR="/var/tmp"
+
 
 PKG_DIR="/usr/kitaman/pkg"
 REPOST_LIST_FILE="/etc/kitaman.repos"
-
-# Possible options: none sexy sexier sexiest too_hot_for_your_display
-OUTPUT_SEXY_LEVEL="sexy"
