--- a/etc/kitaman.conf
+++ b/etc/kitaman.conf
@@ -1,6 +1,8 @@
-# This is kitaman conf file
+# This is a config file for kitaman
+# 
+# Maintained by Kirill R
 # format is very simple
-# ALSO NOTE that for now, kitaman doesnt fully use these options, some paths are sadly still hardwired 
+# Note: You can override any of these settings in ENV
 
 
 KITA_FILES_DIR="/usr/kitaman/kita_files"
